<resources>
    <string name="app_name">HW8_ZahraJannesari_InfoApp</string>
    <string name="name_family">نام و نام خانوادگی<font color='#FF0000'>*</font></string>
    <string name="ID">کد ملی<font color='#FF0000'>*</font></string>
    <string name="Birthday">محل تولد<font color='#FF0000'>*</font></string>
    <string name="Address">آدرس<font color='#FF0000'>*</font></string>
    <string name="zipCode">کد پستی<font color='#FF0000'>*</font></string>
    <string name="Gender">جنسیت:</string>
    <string name="female">زن</string>
    <string name="male">مرد</string>
    <string name="Register">ثبت اطلاعات</string>
    <string name="RegisterForm">فرم ثبت اطلاعات</string>
    <string name="sho_info_form">مشاهده اطلاعات ثبت شده</string>
    <string name="change_info">تغییر اطلاعات</string>
    <string name="newEnter">ورود کاربر جدید</string>
</resources>