<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sho_info_form"
                android:background="@drawable/green_text_view"
                android:layout_margin="8dp"
                android:textColor="@color/DarkGreen"
                android:padding="8dp"
                android:paddingHorizontal="12dp"
                android:layout_marginHorizontal="8dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/textView_ID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_background"
                    android:minHeight="48dp"
                    android:gravity="center|start"
                    android:paddingHorizontal="12dp"
                    android:textStyle="bold"
                    android:textSize="7pt"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/textView_Birthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_background"
                    android:minHeight="48dp"
                    android:gravity="center|start"
                    android:paddingHorizontal="12dp"
                    android:textStyle="bold"
                    android:textSize="7pt"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/textView_Address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_background"
                    android:minHeight="48dp"
                    android:gravity="center|start"
                    android:paddingHorizontal="12dp"
                    android:textStyle="bold"
                    android:textSize="7pt"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/textView_zipCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_background"
                    android:minHeight="48dp"
                    android:gravity="center|start"
                    android:paddingHorizontal="12dp"
                    android:textStyle="bold"
                    android:textSize="7pt"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/textView_Gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_background"
                    android:minHeight="48dp"
                    android:gravity="center|start"
                    android:paddingHorizontal="12dp"
                    android:textStyle="bold"
                    android:textSize="7pt"/>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_changeInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_info"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/button_EnterNewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newEnter"
                android:layout_margin="8dp"
                android:backgroundTint="@color/Red"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>